--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="profile.jpg\WhatsApp Image 2024-05-30 at 3.17.09 PM.jpeg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/hero-bg.jpeg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                   
                   
