--- a/index.html
+++ b/index.html
@@ -250,10 +250,9 @@
               <h3>Jajashini</h3>
               <p></p>
               <div class="social-links">
-                <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/jajashini-cs22" class="github"><i class="bi bi-github"></i></a>
+                <a href="https://www.instagram.com/me_official_xox?igsh=NGFvbXRmeGM1czQ2" class="instagram"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/jajashini-j-21349a297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
