--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">How to create and modify a Git project</h2>
                     <div class="w-more">
-                      <span class="w-ctegory"></span> / <span class="w-date">26 Nov,2023</span>
+                      <span class="w-ctegory">In Microsoft</span> / <span class="w-date">26 Nov,2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -282,7 +282,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Challenge project - Add image analysis and generation capabilities to your application</h2>
                     <div class="w-more">
-                      <span class="w-ctegory"></span> / <span class="w-date">26 Nov, 2023</span>
+                      <span class="w-ctegory">In Microsoft</span> / <span class="w-date">26 Nov, 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -306,7 +306,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Edit code through branching and merging in Git</h2>
                     <div class="w-more">
-                      <span class="w-ctegory"></span> / <span class="w-date">21 Nov, 2023</span>
+                      <span class="w-ctegory">In Microsoft</span> / <span class="w-date">21 Nov, 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
